--- a/plugins/org.backmeup.dropbox/pom.xml
+++ b/plugins/org.backmeup.dropbox/pom.xml
@@ -5,8 +5,8 @@
 		<groupId>org.backmeup</groupId>
 		<artifactId>plugins</artifactId>
 		<version>0.0.1</version>
-	</parent>	
-	<artifactId>dropbox</artifactId>	
+	</parent>
+	<artifactId>dropbox</artifactId>
 	<packaging>bundle</packaging>
 	<dependencies>
 		<dependency>
@@ -35,22 +35,22 @@
 		<dependency>
 			<groupId>commons-logging</groupId>
 			<artifactId>commons-logging</artifactId>
-			<version>1.1.1</version> 
+			<version>1.1.1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpclient</artifactId>
-			<version>4.0.3</version> 
+			<version>4.0.3</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpcore</artifactId>
-			<version>4.2</version> 
+			<version>4.2</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpmime</artifactId>
-			<version>4.1.3</version> 
+			<version>4.1.3</version>
 		</dependency>
 		<dependency>
 			<groupId>com.googlecode.json-simple</groupId>
@@ -79,6 +79,31 @@
 						<Private-Package>org.backmeup.dropbox.*</Private-Package>
 					</instructions>
 				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-dependency-plugin</artifactId>
+				<version>2.4</version>
+				<executions>
+					<execution>
+						<id>copy-installed</id>
+						<phase>install</phase>
+						<goals>
+							<goal>copy</goal>
+						</goals>
+						<configuration>
+							<artifactItems>
+								<artifactItem>
+									<groupId>${project.groupId}</groupId>
+									<artifactId>${project.artifactId}</artifactId>
+									<version>${project.version}</version>
+									<type>${project.packaging}</type>
+								</artifactItem>
+							</artifactItems>
+							<outputDirectory>../build</outputDirectory>
+						</configuration>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
