--- a/plugins/org.backmeup.skydrive/pom.xml
+++ b/plugins/org.backmeup.skydrive/pom.xml
@@ -52,23 +52,31 @@
 					</instructions>
 				</configuration>
 			</plugin>
-			<!-- 
-			<configuration>
-					<instructions>
-						<Bundle-SymbolicName>${project.groupId}.${project.artifactId}</Bundle-SymbolicName>
-						<Bundle-Name>${project.name}</Bundle-Name>
-						<Bundle-Version>${project.version}</Bundle-Version>			
-						<Import-Package>!org.apache*, !org.json*, !javax.servlet, *</Import-Package>
-													
-						<Embed-Dependency>client2, commons-logging, httpclient, httpcore, httpmime</Embed-Dependency>						
-						<Embed-Transitive>false</Embed-Transitive>
-						<Embed-Directory>lib</Embed-Directory>
-						<Private-Package>org.backmeup.dropbox.*</Private-Package>
-					</instructions>
-				</configuration>
-			
-			-->
-			
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-dependency-plugin</artifactId>
+				<version>2.4</version>
+				<executions>
+					<execution>
+						<id>copy-installed</id>
+						<phase>install</phase>
+						<goals>
+							<goal>copy</goal>
+						</goals>
+						<configuration>
+							<artifactItems>
+								<artifactItem>
+									<groupId>${project.groupId}</groupId>
+									<artifactId>${project.artifactId}</artifactId>
+									<version>${project.version}</version>
+									<type>${project.packaging}</type>
+								</artifactItem>
+							</artifactItems>
+							<outputDirectory>../build</outputDirectory>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
 	</build>
 </project>
