--- a/org.backmeup.plugin.api/pom.xml
+++ b/org.backmeup.plugin.api/pom.xml
@@ -18,7 +18,13 @@
 		<dependency>
 			<groupId>org.apache.hadoop</groupId>
 			<artifactId>hadoop-core</artifactId>
-			<version>0.20.205.0</version>
+                        <version>0.20.205.0</version>
+                        <exclusions>
+			  <exclusion>
+			    <groupId>hsqldb</groupId>
+			    <artifactId>hsqldb</artifactId>
+			  </exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.commons</groupId>
