--- a/org.backmeup.plugin.api/pom.xml
+++ b/org.backmeup.plugin.api/pom.xml
@@ -18,8 +18,8 @@
 		<dependency>
 			<groupId>org.apache.hadoop</groupId>
 			<artifactId>hadoop-core</artifactId>
-                        <version>0.20.205.0</version>
-                        <exclusions>
+            <version>0.20.205.0</version>
+            <exclusions>
 			  <exclusion>
 			    <groupId>hsqldb</groupId>
 			    <artifactId>hsqldb</artifactId>
@@ -30,6 +30,16 @@
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-compress</artifactId>
 			<version>1.3</version>
+		</dependency>		
+		<dependency>
+			<groupId>org.apache.lucene</groupId>
+			<artifactId>lucene-core</artifactId>
+			<version>3.6.0</version>
+		</dependency>		
+		<dependency>
+			<groupId>org.apache.tika</groupId>
+			<artifactId>tika-core</artifactId>
+			<version>1.1</version>
 		</dependency>		
 	</dependencies>
 	
