Basic unit test for LocalFilesystemStorageReader & Writer

--- a/org.backmeup.plugin.api/pom.xml
+++ b/org.backmeup.plugin.api/pom.xml
@@ -41,6 +41,11 @@
 			<artifactId>tika-core</artifactId>
 			<version>1.1</version>
 		</dependency>		
+	    <dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.10</version>
+		</dependency>
 	</dependencies>
 	
 	<build>
