Added tomcat6 and tomcat7 deployment via maven. Now using RESTEasy as JAX-RS runtime.

--- a/org.backmeup.embedded/.project
+++ b/org.backmeup.embedded/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>org.backmeup.grizzly</name>
+	<name>org.backmeup.embedded</name>
 	<comment></comment>
 	<projects>
 	</projects>
