--- a/org.backmeup.rest/src/main/webapp/WEB-INF/web.xml
+++ b/org.backmeup.rest/src/main/webapp/WEB-INF/web.xml
@@ -3,18 +3,29 @@
 	xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
 	id="WebApp_ID" version="2.5">
+	<listener>
+		<listener-class>org.backmeup.rest.listener.ContextListener</listener-class>
+	</listener>
 	<servlet>
 		<servlet-name>BackMeUp REST API</servlet-name>
-		<servlet-class>com.sun.jersey.spi.container.servlet.ServletContainer</servlet-class>
-		<init-param>
-			<param-name>com.sun.jersey.config.property.packages</param-name>
-			<param-value>org.backmeup.rest;org.codehaus.jackson.jaxrs</param-value>
-		</init-param>
+		<!-- <servlet-class>com.sun.jersey.spi.container.servlet.ServletContainer</servlet-class> 
+			<init-param> <param-name>com.sun.jersey.config.property.packages</param-name> 
+			<param-value>org.backmeup.rest;org.codehaus.jackson.jaxrs</param-value> </init-param> -->
+		<servlet-class>org.jboss.resteasy.plugins.server.servlet.HttpServletDispatcher</servlet-class>
+
 		<load-on-startup>1</load-on-startup>
 	</servlet>
 	<servlet-mapping>
-		<servlet-name>BackMeUp REST API
-		</servlet-name>
+		<servlet-name>BackMeUp REST API</servlet-name>
 		<url-pattern>/backmeup/*</url-pattern>
 	</servlet-mapping>
+	<context-param>
+		<param-name>resteasy.scan</param-name>
+		<param-value>true</param-value>
+	</context-param>
+	<context-param>
+		<param-name>resteasy.servlet.mapping.prefix</param-name>
+		<param-value>/backmeup</param-value>
+	</context-param>
+
 </web-app>
