Introduced plugin metadata (e.g. file size limitation or maximal frequency of backups

--- a/org.backmeup.logic.dummy.impl/pom.xml
+++ b/org.backmeup.logic.dummy.impl/pom.xml
@@ -15,6 +15,11 @@
 		</dependency>
 		<dependency>
 			<groupId>org.backmeup</groupId>
+			<artifactId>plugin.api</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.backmeup</groupId>
 			<artifactId>logic</artifactId>
 			<version>${project.version}</version>
 		</dependency>
