BusinessLogic now uses transactions properly; create a small Python library for Backmeup-REST-Communication; added REST-Python-Tests

--- a/org.backmeup.rest/src/main/webapp/WEB-INF/web.xml
+++ b/org.backmeup.rest/src/main/webapp/WEB-INF/web.xml
@@ -44,6 +44,7 @@
 		org.backmeup.rest.Datasinks,
 		org.backmeup.rest.Datasources,
 		org.backmeup.rest.Users,
+		org.backmeup.rest.Profiles,
 		org.backmeup.rest.Metadata
 		</param-value>
 	</context-param>
