--- a/plugins/org.backmeup.skydrive/pom.xml
+++ b/plugins/org.backmeup.skydrive/pom.xml
@@ -31,6 +31,13 @@
 		<artifactId>plugin.api</artifactId>
 		<version>0.0.1</version>
   	</dependency> 
+  	
+  	<dependency>
+  		<groupId>org.backmeup</groupId>
+		<artifactId>plugin.api.impl</artifactId>
+		<version>0.0.1</version>
+		<scope>test</scope>
+  	</dependency> 
   </dependencies>
   <build>
 		<plugins>
