--- a/plugins/org.backmeup.dropbox/pom.xml
+++ b/plugins/org.backmeup.dropbox/pom.xml
@@ -57,6 +57,13 @@
 			<artifactId>json-simple</artifactId>
 			<version>1.1.1</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.backmeup</groupId>
+			<artifactId>plugin.api.impl</artifactId>
+			<version>0.0.1</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
