multiple metadata for one file

--- a/org.backmeup.rest/src/main/resources/plugin.properties
+++ b/org.backmeup.rest/src/main/resources/plugin.properties
@@ -1,3 +1,3 @@
-osgi.exportedPackages = org.backmeup.plugin.spi org.backmeup.model org.backmeup.model.spi org.backmeup.plugin.api.connectors org.backmeup.plugin.api.storage                        
+osgi.exportedPackages = org.backmeup.plugin.spi org.backmeup.model org.backmeup.model.spi org.backmeup.plugin.api.connectors org.backmeup.plugin.api.storage org.backmeup.plugin.api 
 
 
