--- a/plugins/org.backmeup.moodle/pom.xml
+++ b/plugins/org.backmeup.moodle/pom.xml
@@ -20,7 +20,11 @@
 			<artifactId>plugin.api</artifactId>
 			<version>0.0.1</version>
 		</dependency>
-
+		<dependency>
+			<groupId>org.jdom</groupId>
+			<artifactId>jdom</artifactId>
+			<version>2.0.2</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
@@ -34,6 +38,16 @@
 						<Bundle-SymbolicName>${project.groupId}.${project.artifactId}</Bundle-SymbolicName>
 						<Bundle-Name>${project.name}</Bundle-Name>
 						<Bundle-Version>${project.version}</Bundle-Version>
+						<Export-Package>
+							org.jdom.*, javax.persistence.*;
+						</Export-Package>
+						<Import-Package>
+							oracle.xml.parser;resolution:=optional
+						</Import-Package>
+						<DynamicImport-Package>*</DynamicImport-Package>
+						<Embed-Dependency>model, plugin.api, jdom</Embed-Dependency>
+						<Embed-Transitive>false</Embed-Transitive>
+						<Private-Package>org.backmeup.moodle.*</Private-Package>
 					</instructions>
 				</configuration>
 			</plugin>
