--- a/org.backmeup.plugin.api.impl/pom.xml
+++ b/org.backmeup.plugin.api.impl/pom.xml
@@ -8,6 +8,15 @@
 	</parent>
 	<artifactId>plugin.api.impl</artifactId>
 	<name>Plugin API Implementation</name>
+	
+    <repositories>
+        <repository>
+            <id>Sonatype</id>
+            <name>Maven Repository Switchboard</name>
+            <layout>default</layout>
+            <url>http://oss.sonatype.org/content/repositories/releases/</url>
+        </repository>
+    </repositories>
 
 	<dependencies>
 		<dependency>
@@ -46,7 +55,12 @@
 			<groupId>org.apache.tika</groupId>
 			<artifactId>tika-core</artifactId>
 			<version>1.1</version>
-		</dependency>		
+		</dependency>
+        <dependency> 
+            <groupId>org.elasticsearch</groupId> 
+            <artifactId>elasticsearch</artifactId> 
+            <version>0.19.8</version> 
+        </dependency> 			
 	    <dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
