Added user specific properties; the name of the destination folder is now BMU_date_time (can be configured within bl.properties); Added REST interface for user properties and python-tests to test them

--- a/org.backmeup.rest/src/main/resources/bl.properties
+++ b/org.backmeup.rest/src/main/resources/bl.properties
@@ -1,4 +1,6 @@
-callbackUrl = http://www.localhost.at:8080
+callbackUrl = http://www.localhost.at:9998
 job.temporaryDirectory = C:/Fabian/temp
-
+# %SOURCE% is a placeholder for the source string of the backup (e. g. dropbox); this string will be parsed by a SimpleDateFormat-instance
+# Characters written between '...' will not be interpreted by SimpleDateFormat (therefore the 'M' in BMU will not be converted into the Month.
+job.backupname = 'BMU_%SOURCE%_'dd_MM_yyyy_hh_mm
 
