--- a/org.backmeup.model/pom.xml
+++ b/org.backmeup.model/pom.xml
@@ -36,7 +36,7 @@
 						<Bundle-SymbolicName>${project.groupId}.${project.artifactId}</Bundle-SymbolicName>
 						<Bundle-Name>${project.name}</Bundle-Name>
 						<Bundle-Version>${project.version}</Bundle-Version>
-						<Export-Package>org.backmeup.*,org.backmeup.spi.*,org.backmeup.exceptions.*</Export-Package>
+						<Export-Package>org.backmeup.model,org.backmeup.model.spi,org.backmeup.model.exceptions</Export-Package>
 						<Embed-Directory>lib</Embed-Directory>
 						<Import-Package>!javax.*</Import-Package>
 					</instructions>
