--- a/org.backmeup.plugin.api.impl/pom.xml
+++ b/org.backmeup.plugin.api.impl/pom.xml
@@ -8,15 +8,15 @@
 	</parent>
 	<artifactId>plugin.api.impl</artifactId>
 	<name>Plugin API Implementation</name>
-	
-    <repositories>
-        <repository>
-            <id>Sonatype</id>
-            <name>Maven Repository Switchboard</name>
-            <layout>default</layout>
-            <url>http://oss.sonatype.org/content/repositories/releases/</url>
-        </repository>
-    </repositories>
+
+	<repositories>
+		<repository>
+			<id>Sonatype</id>
+			<name>Maven Repository Switchboard</name>
+			<layout>default</layout>
+			<url>http://oss.sonatype.org/content/repositories/releases/</url>
+		</repository>
+	</repositories>
 
 	<dependencies>
 		<dependency>
@@ -24,7 +24,7 @@
 			<artifactId>plugin.api</artifactId>
 			<version>${project.version}</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
@@ -33,38 +33,55 @@
 		<dependency>
 			<groupId>org.apache.hadoop</groupId>
 			<artifactId>hadoop-core</artifactId>
-            <version>0.20.205.0</version>
-            <exclusions>
-			  <exclusion>
-			    <groupId>hsqldb</groupId>
-			    <artifactId>hsqldb</artifactId>
-			  </exclusion>
+			<version>0.20.205.0</version>
+			<exclusions>
+				<exclusion>
+					<groupId>hsqldb</groupId>
+					<artifactId>hsqldb</artifactId>
+				</exclusion>
 			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-compress</artifactId>
 			<version>1.3</version>
-		</dependency>		
+		</dependency>
 		<dependency>
 			<groupId>org.apache.lucene</groupId>
 			<artifactId>lucene-core</artifactId>
 			<version>3.6.0</version>
-		</dependency>		
+		</dependency>
 		<dependency>
 			<groupId>org.apache.tika</groupId>
 			<artifactId>tika-core</artifactId>
 			<version>1.1</version>
 		</dependency>
-        <dependency> 
-            <groupId>org.elasticsearch</groupId> 
-            <artifactId>elasticsearch</artifactId> 
-            <version>0.19.8</version> 
-        </dependency> 			
-	    <dependency>
+		<dependency>
+			<groupId>org.elasticsearch</groupId>
+			<artifactId>elasticsearch</artifactId>
+			<version>0.19.8</version>
+		</dependency>
+		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.10</version>
 		</dependency>
 	</dependencies>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-source-plugin</artifactId>
+				<version>2.2</version>
+				<executions>
+					<execution>
+						<id>attach-sources</id>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
 </project>
