Password will now be stored within and validated with keyserver; Added service class to reflect keyserver service entities

--- a/org.backmeup.logic.impl/pom.xml
+++ b/org.backmeup.logic.impl/pom.xml
@@ -34,6 +34,11 @@
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>
+			<groupId>org.backmeup</groupId>
+			<artifactId>keyserver.client</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.10</version>
