Indexing: how-to for setting up communication with an ElasticSearch cluster

--- a/org.backmeup.plugin.api.impl/src/main/resources/index.properties
+++ b/org.backmeup.plugin.api.impl/src/main/resources/index.properties
@@ -1,1 +1,3 @@
-elasticsearch.url = http://localhost:9200
+# Add a comma-separated list of elastic search hosts here
+elasticsearch.hostnames = es1, es2
+elasticsearch.port = 9300
