--- a/org.backmeup.logic.impl/src/test/resources/bl.properties
+++ b/org.backmeup.logic.impl/src/test/resources/bl.properties
@@ -1,4 +1,10 @@
 callbackUrl = http://www.localhost.at:9998
+# the url that shall be sent within the verification emails. The verification key replaces the %s entry within the url.
+emailVerificationUrl = http://www.localhost.at:9998/verify_email/%s
+minimalPasswordLength = 8
+# email regex provided by http://www.regular-expressions.info/email.html
+emailRegex = ^[A-Z0-9._%+-]+@[A-Z0-9.-]+\.[A-Z]{2,4}$
+
 job.temporaryDirectory = C:/Fabian/temp
 # %SOURCE% is a placeholder for the source string of the backup (e. g. dropbox); this string will be parsed by a SimpleDateFormat-instance
 # Characters written between '...' will not be interpreted by SimpleDateFormat (therefore the 'M' in BMU will not be converted into the Month.
