The keyserver.client now uses a properties-collection to store auth information

--- a/org.backmeup.keyserver.client/src/test/resources/bl.properties
+++ b/org.backmeup.keyserver.client/src/test/resources/bl.properties
@@ -8,8 +8,9 @@ keyserver.scheme = https
 keyserver.host = keysrv.backmeup.at
 keyserver.path = /keysrv
 
-keyserver.truststore = bmu-keysrv01.truststore
+keyserver.truststore = bmu-keysrv.truststore
 keyserver.truststoreType = jks
+keyserver.truststorePwd = 123456
 # to specify truststorePwd, use keyserver.truststorePwd = ... 
 
 keyserver.keystore = bmu-core-pwd.p12
