--- a/org.backmeup.job.impl/pom.xml
+++ b/org.backmeup.job.impl/pom.xml
@@ -55,5 +55,10 @@
 			<artifactId>cxf-rt-frontend-jaxrs</artifactId>
 			<version>2.5.0</version>
 		</dependency>
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.17</version>
+		</dependency>    
 	</dependencies>
 </project>
