--- a/org.backmeup.job.impl/pom.xml
+++ b/org.backmeup.job.impl/pom.xml
@@ -7,6 +7,14 @@
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>job.impl</artifactId>
+	
+	<repositories>
+		<repository>
+  			<id>typesafe</id>
+  			<name>Typesafe Repository</name>
+  			<url>http://repo.typesafe.com/typesafe/releases/</url>
+		</repository>
+	</repositories>
 
 	<dependencies>
 		<dependency>
@@ -54,6 +62,16 @@
 			<groupId>org.apache.cxf</groupId>
 			<artifactId>cxf-rt-frontend-jaxrs</artifactId>
 			<version>2.5.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.typesafe.akka</groupId>
+			<artifactId>akka-actor</artifactId>
+			<version>2.0.3</version>
+		</dependency>
+		<dependency>
+    		<groupId>org.quartz-scheduler</groupId>
+    		<artifactId>quartz</artifactId>
+    		<version>2.1.6</version>
 		</dependency>
 		<dependency>
 			<groupId>log4j</groupId>
