--- a/org.backmeup.embedded/pom.xml
+++ b/org.backmeup.embedded/pom.xml
@@ -11,30 +11,25 @@
 	<properties>
 		<org.glassfish.grizzly.version>2.2.5</org.glassfish.grizzly.version>
 	</properties>
+	
+	<repositories>
+		<repository>
+			<id>Sonatype</id>
+			<name>Maven Repository Switchboard</name>
+			<layout>default</layout>
+			<url>http://oss.sonatype.org/content/repositories/releases/</url>
+		</repository>
+	</repositories>
+	
 	<dependencies>
-		<!-- 
-		<dependency>
-			<groupId>org.glassfish.grizzly</groupId>
-			<artifactId>grizzly-framework</artifactId>
-			<version>${org.glassfish.grizzly.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.glassfish.grizzly</groupId>
-			<artifactId>grizzly-http</artifactId>
-			<version>${org.glassfish.grizzly.version}</version>
-		</dependency>
-
-		<dependency>
-			<groupId>org.glassfish.grizzly</groupId>
-			<artifactId>grizzly-http-server</artifactId>
-			<version>${org.glassfish.grizzly.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>com.sun.jersey</groupId>
-			<artifactId>jersey-grizzly2</artifactId>
-			<version>${jersey.version}</version>
-		</dependency>
-		 -->
+		<!-- <dependency> <groupId>org.glassfish.grizzly</groupId> <artifactId>grizzly-framework</artifactId> 
+			<version>${org.glassfish.grizzly.version}</version> </dependency> <dependency> 
+			<groupId>org.glassfish.grizzly</groupId> <artifactId>grizzly-http</artifactId> 
+			<version>${org.glassfish.grizzly.version}</version> </dependency> <dependency> 
+			<groupId>org.glassfish.grizzly</groupId> <artifactId>grizzly-http-server</artifactId> 
+			<version>${org.glassfish.grizzly.version}</version> </dependency> <dependency> 
+			<groupId>com.sun.jersey</groupId> <artifactId>jersey-grizzly2</artifactId> 
+			<version>${jersey.version}</version> </dependency> -->
 		<dependency>
 			<groupId>org.backmeup</groupId>
 			<artifactId>rest</artifactId>
@@ -57,9 +52,14 @@
 			<version>2.2.4</version>
 		</dependency>
 		<dependency>
-		<groupId>org.jboss.resteasy</groupId>
-		<artifactId>tjws</artifactId>
-		<version>2.3.3.Final</version>		
+			<groupId>org.jboss.resteasy</groupId>
+			<artifactId>tjws</artifactId>
+			<version>2.3.3.Final</version>
+		</dependency>
+		<dependency>
+			<groupId>org.elasticsearch</groupId>
+			<artifactId>elasticsearch</artifactId>
+			<version>0.19.8</version>
 		</dependency>
 	</dependencies>
 	<build>
@@ -77,7 +77,7 @@
 				</executions>
 				<configuration>
 					<executable>java</executable>
-					<arguments>						
+					<arguments>
 						<argument>-cp</argument>
 						<classpath />
 						<argument>org.backmeup.embedded.Main</argument>
@@ -89,37 +89,37 @@
 	<profiles>
 		<profile>
 			<id>debug</id>
-			<activation>			
+			<activation>
 				<property>
 					<name>debug</name>
 				</property>
 			</activation>
 			<build>
-			<plugins>
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>exec-maven-plugin</artifactId>
-				<version>1.2.1</version>
-				<executions>
-					<execution>
-						<goals>
-							<goal>exec</goal>
-						</goals>
-					</execution>
-				</executions>
-				<configuration>
-					<executable>java</executable>
-					<arguments>
-						<!-- start the VM in debug mode -->
-						<argument>-Xdebug</argument>
-						<argument>-Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=1044</argument>
-						<argument>-cp</argument>
-						<classpath />
-						<argument>org.backmeup.embedded.Main</argument>
-					</arguments>
-				</configuration>
-			</plugin>
-		</plugins>
+				<plugins>
+					<plugin>
+						<groupId>org.codehaus.mojo</groupId>
+						<artifactId>exec-maven-plugin</artifactId>
+						<version>1.2.1</version>
+						<executions>
+							<execution>
+								<goals>
+									<goal>exec</goal>
+								</goals>
+							</execution>
+						</executions>
+						<configuration>
+							<executable>java</executable>
+							<arguments>
+								<!-- start the VM in debug mode -->
+								<argument>-Xdebug</argument>
+								<argument>-Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=1044</argument>
+								<argument>-cp</argument>
+								<classpath />
+								<argument>org.backmeup.embedded.Main</argument>
+							</arguments>
+						</configuration>
+					</plugin>
+				</plugins>
 			</build>
 		</profile>
 
