Adjusted projects to fully utilize the keyserver

--- a/org.backmeup.job.impl/pom.xml
+++ b/org.backmeup.job.impl/pom.xml
@@ -31,6 +31,11 @@
 		</dependency>
 		<dependency>
 			<groupId>org.backmeup</groupId>
+			<artifactId>keyserver.client</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.backmeup</groupId>
 			<artifactId>utilities</artifactId>
 			<version>${project.version}</version>
 		</dependency>		
