--- a/org.backmeup.job.impl/pom.xml
+++ b/org.backmeup.job.impl/pom.xml
@@ -84,6 +84,11 @@
 			<version>2.0.3</version>
 		</dependency>
 		<dependency>
+  			<groupId>com.rabbitmq</groupId>
+  			<artifactId>amqp-client</artifactId>
+  			<version>2.8.6</version>
+		</dependency>
+		<dependency>
     		<groupId>org.quartz-scheduler</groupId>
     		<artifactId>quartz</artifactId>
     		<version>2.1.6</version>
@@ -92,6 +97,6 @@
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
 			<version>1.2.17</version>
-		</dependency>    
+		</dependency> 
 	</dependencies>
 </project>
