--- a/org.backmeup.embedded/pom.xml
+++ b/org.backmeup.embedded/pom.xml
@@ -47,6 +47,11 @@
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>
+			<groupId>org.backmeup</groupId>
+			<artifactId>job.impl</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
 			<groupId>org.hsqldb</groupId>
 			<artifactId>hsqldb</artifactId>
 			<version>2.2.4</version>
