--- a/org.backmeup.embedded/src/main/resources/bl.properties
+++ b/org.backmeup.embedded/src/main/resources/bl.properties
@@ -23,3 +23,6 @@ keyserver.keystoreType = pkcs12
 keyserver.keystorePwd = 123
 
 keyserver.allowAllHostnames = true
+
+message.queue.host = localhost
+message.queue.name = backmeup
