--- a/org.backmeup.plugin.api/pom.xml
+++ b/org.backmeup.plugin.api/pom.xml
@@ -11,6 +11,11 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>org.backmeup</groupId>
+			<artifactId>model</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
 			<version>2.2.2</version>
