Method to generate a xml ticket for burning station

--- a/plugins/org.backmeup.discmailing/src/main/resources/discmailing.properties
+++ b/plugins/org.backmeup.discmailing/src/main/resources/discmailing.properties
@@ -1,12 +1,9 @@
-app.key = YOUR_APP_KEY
-app.secret = YOUR_APP_SECRET
-
 #access data to the burning station
-hostname = openrc2
-username = root
-destination = /data/backmeup/users
-tickets = /data/backmeup/tickets
-port = 22
-privateKey = /root/.ssh/id_rsa
-#privateKey = /home/thomasg/.ssh/id_rsa
+remote.host = openrc2
+remote.port = 22
+remote.user = root
+remote.target = /data/backmeup/users
+remote.ticketpath = /data/backmeup/tickets
+ssh.key = /root/.ssh/id_rsa
+ssh.key = /home/thomasg/.ssh/id_rsa
 
