Basic index/search roundtrip for BusinessLogicImpl

--- a/org.backmeup.embedded/src/main/resources/bl.properties
+++ b/org.backmeup.embedded/src/main/resources/bl.properties
@@ -26,3 +26,6 @@ keyserver.allowAllHostnames = true
 
 message.queue.host = localhost
 message.queue.name = backmeup
+
+index.host = localhost
+index.port = 9200
