--- a/org.backmeup.logic.impl/pom.xml
+++ b/org.backmeup.logic.impl/pom.xml
@@ -35,6 +35,11 @@
 		</dependency>
 		<dependency>
 			<groupId>org.backmeup</groupId>
+			<artifactId>plugin.api.impl</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.backmeup</groupId>
 			<artifactId>plugin</artifactId>
 			<version>${project.version}</version>
 		</dependency>
