--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,8 @@
 	<packaging>pom</packaging>
 	<properties>
 		<weld.version>1.1.8.Final</weld.version>
-		<jersey.version>1.12</jersey.version>
+                <jersey.version>1.12</jersey.version>
+                <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 	<modules>
 		<!-- build the interfaces + model first -->
