New Properites, special char problem fixed, xml ticket name with dynamic jobid

--- a/plugins/org.backmeup.discmailing/src/main/resources/discmailing.properties
+++ b/plugins/org.backmeup.discmailing/src/main/resources/discmailing.properties
@@ -5,5 +5,5 @@ remote.user = root
 remote.target = /data/backmeup/users
 remote.ticketpath = /data/backmeup/tickets
 ssh.key = /root/.ssh/id_rsa
-ssh.key = /home/thomasg/.ssh/id_rsa
+#ssh.key = /home/thomasg/.ssh/id_rsa
 
