--- a/plugins/org.backmeup.facebook/pom.xml
+++ b/plugins/org.backmeup.facebook/pom.xml
@@ -20,6 +20,11 @@
 			<version>1.4.2</version>
 		</dependency>
 		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20090211</version>
+		</dependency>
+		<dependency>
 			<groupId>org.backmeup</groupId>
 			<artifactId>model</artifactId>
 			<version>0.0.1</version>
@@ -47,7 +52,7 @@
 						<Import-Package>
 						</Import-Package>
 						<DynamicImport-Package>*</DynamicImport-Package>
-						<Embed-Dependency>model, plugin.api, restfb, ecs</Embed-Dependency>
+						<Embed-Dependency>model, plugin.api, restfb, ecs, json</Embed-Dependency>
 						<Embed-Transitive>false</Embed-Transitive>
 						<Embed-Directory>lib</Embed-Directory>
 						<Private-Package>org.backmeup.facebook.*</Private-Package>
