--- a/org.backmeup.embedded/src/main/resources/bl.properties
+++ b/org.backmeup.embedded/src/main/resources/bl.properties
@@ -8,7 +8,7 @@ emailRegex = ^[A-Z0-9._%+-]+@[A-Z0-9.-]+\.[A-Z]{2,4}$
 job.temporaryDirectory = /data/tmp_files
 # %SOURCE% is a placeholder for the source string of the backup (e. g. dropbox); this string will be parsed by a SimpleDateFormat-instance
 # Characters written between '...' will not be interpreted by SimpleDateFormat (therefore the 'M' in BMU will not be converted into the Month.
-job.backupname = 'BMU_%SOURCE%_%PROFILEID%_'dd_MM_yyyy_hh_mm
+job.backupname = 'BMU_%SOURCE%_%PROFILEID%_'dd_MM_yyyy_HH_mm
 
 keyserver.scheme = https
 keyserver.host = keysrv.backmeup.at
