--- a/org.backmeup.rest/src/main/webapp/WEB-INF/web.xml
+++ b/org.backmeup.rest/src/main/webapp/WEB-INF/web.xml
@@ -29,8 +29,10 @@
 		org.backmeup.rest.exceptionmapper.AlreadyRegisteredExceptionMapper,
 		org.backmeup.rest.exceptionmapper.IllegalArgumentExceptionMapper,
 		org.backmeup.rest.exceptionmapper.InvalidCredentialsMapper,
+		org.backmeup.rest.exceptionmapper.InvalidKeyExceptionMapper,
 		org.backmeup.rest.exceptionmapper.NullPointerExceptionMapper,
 		org.backmeup.rest.exceptionmapper.UnknownUserExceptionMapper,
+		org.backmeup.rest.exceptionmapper.UnknownUserPropertyExceptionMapper,
 		org.backmeup.rest.exceptionmapper.BackMeUpExceptionMapper,		
 		org.backmeup.rest.provider.ObjectMapperContextResolver
 		</param-value>
@@ -43,9 +45,10 @@
 		org.backmeup.rest.Backups,
 		org.backmeup.rest.Datasinks,
 		org.backmeup.rest.Datasources,
-		org.backmeup.rest.Users,
+		org.backmeup.rest.Mails,
+		org.backmeup.rest.Metadata,
 		org.backmeup.rest.Profiles,
-		org.backmeup.rest.Metadata
+		org.backmeup.rest.Users				
 		</param-value>
 	</context-param>
 	<context-param>
