Embedded mode now starts 10 Job receivers on the message queue per default

--- a/org.backmeup.embedded/src/main/resources/bl.properties
+++ b/org.backmeup.embedded/src/main/resources/bl.properties
@@ -26,6 +26,7 @@ keyserver.allowAllHostnames = true
 
 message.queue.host = localhost
 message.queue.name = backmeup
+message.queue.receivers = 10
 
 index.host = localhost
 index.port = 9200
