--- a/org.backmeup.logic.impl/pom.xml
+++ b/org.backmeup.logic.impl/pom.xml
@@ -68,6 +68,12 @@
 			<artifactId>weld-se</artifactId>
 			<version>${weld.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.17</version>
+		</dependency>
+            
 
 		<!-- test relevant dependencies -->
 		<dependency>
