--- a/org.backmeup.plugin.api.impl/pom.xml
+++ b/org.backmeup.plugin.api.impl/pom.xml
@@ -76,5 +76,10 @@
 			<artifactId>junit</artifactId>
 			<version>4.10</version>
 		</dependency>
+		<dependency>
+			<groupId>org.im4java</groupId>
+			<artifactId>im4java</artifactId>
+			<version>1.2.0</version>
+		</dependency>    
 	</dependencies>	
 </project>
