Thumbnail rendering config options

--- a/org.backmeup.plugin.api.impl/pom.xml
+++ b/org.backmeup.plugin.api.impl/pom.xml
@@ -24,6 +24,11 @@
 			<artifactId>plugin.api</artifactId>
 			<version>${project.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.backmeup</groupId>
+			<artifactId>utilities</artifactId>
+			<version>${project.version}</version>
+		</dependency>
 		
 		<dependency>
 			<groupId>commons-io</groupId>
