#48: ZIP-Plugin now creates the remote directory before copying the file

--- a/plugins/org.backmeup.zip/src/main/resources/zip.properties
+++ b/plugins/org.backmeup.zip/src/main/resources/zip.properties
@@ -5,6 +5,8 @@ temporaryPath = /tmp/backups/{0}/
 isRemote = false
 # {0} ... the user id, {1} ... the filename of the zip  
 remote.target = /tmp/backups/{0}/{1}
+# {0} ... the user id
+remote.directory = /tmp/backups/{0}/
 remote.host = openrc2
 remote.port = 22
 remote.user = root
